- Fix past, future and range on field search with rails 4, local time was used instead of UTC
- Ignore search params when params[:id] is set
- Eager load HABTM with scope using left join
- Add active_scaffold/indicator.gif to precompile so rails 4.2 precompiles it

= 3.4.33
- Fix _base_form when used with actions, so :multipart and :persistent can set to false instead of getting them from action config
- Copy update.columns from create.columns, if not defined
- Ensure ajax:complete is called to enable form after render_form_field request, even if element is removed

= 3.4.32
- Add ActiveScaffold.reload_embedded JS method, to reload an embedded scaffold
- Fix nested on composite primary key associations
- Fix render :super on partials rendered with :collection (like _list_record)
- Fix required on paperclip, carrierwave and dragonfly bridges, when file is already saved

= 3.4.31
- fix multiple support for :select form_ui with non-association columns
- remove yaml response support, not used in rails usually and no support for respond_to :yaml
- clean code to generate API responses (json/xml)
- really fix compatibility with composite primary keys gem
- fix country select on rails 3.2
- ensure prefixes have active_scaffold_overrides when delayed_setup is used

= 3.4.30
- move jquery-ui images to app/assets for rails 4.2 compatibility
- clean css so no need to reverse links on nested
- fix responds_to_parent with redirect

= 3.4.29
- fix for search_ui :multi_select on non-association column and non integer options
- ensure id for radio button is valid
- check foregin_type present, not only nil, on polymorphic associations

= 3.4.28
- don't stop on first associated record with error
- compatibility fix for composite primary keys gem
- fix double columns output on json and xml formats
- fix for search_ui :multi_select on non-association column

= 3.4.27
- support use_html option in columns for inplace_edit