@@ -2,6 +2,7 @@
 - Ignore search params when params[:id] is set
 - Eager load HABTM with scope using left join
 - Add active_scaffold/indicator.gif to precompile so rails 4.2 precompiles it
+- Add support for ActiveRecord::Enum so :select form_ui is used by default
 
 = 3.4.33
 - Fix _base_form when used with actions, so :multipart and :persistent can set to false instead of getting them from action config
